<resources>
    <string name="app_name">Shoe Store</string>
    <!-- Login Fragment -->
    <string name="login_fragment_title">Login</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <!-- Welcome Fragment -->
    <string name="welcome_fragment_title">Welcome</string>
    <string name="welcomeTextView">Welcome to</string>
    <string name="instructionsBtn">See Instructions</string>
    <!-- Instructions Fragment -->
    <string name="instructions_fragment_title">Instructions</string>
    <string name="shopBtn">Start Shopping</string>
    <string name="instructionsTitleTextView">Shop:</string>
    <string name="firstInstructionTextView">Press the Plus button to add a new pair of shoes to your list.</string>
    <string name="secondInstructionTextView">Press the Logout option to log out from the app.</string>
    <string name="thirdInstructionTextView">On the next screen a list of shoes will display all the shoes you have.</string>
    <!-- ShoeList Fragment -->
    <string name="shoe_list_fragment_title">List of Shoes</string>
    <string name="addShoeContentDescription">add</string>
    <string name="logoutMenuBtn">Logout</string>
    <!-- AddShoe Fragment -->
    <string name="add_shoe_fragment_title">Add a Shoe</string>
    <string name="nameHint">name</string>
    <string name="companyHint">Company</string>
    <string name="sizeHint">Size</string>
    <string name="descriptionHint">Description</string>
    <string name="saveBtn">Save</string>
    <string name="cancelBtn">Cancel</string>
</resources>
