<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintGuide_percent="0.4"
    android:orientation="horizontal"/>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/user"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:hint="@string/user"
    app:layout_constraintBottom_toTopOf="@+id/password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline_horizontal">
    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:minHeight="48dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/password"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:hint="@string/password"
    app:endIconMode="password_toggle"
    app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/user">
    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:minHeight="48dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintGuide_percent="0.5"
    android:orientation="vertical"/>

  <Button
    android:id="@+id/containedButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:text="@string/loginBtn"
    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
    app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
    app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>